<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="video_game_image">Video game image</string>
    <string name="video_game_title">Video game title</string>
    <string name="video_games">Video games</string>
    <string name="ads">Реклама -></string>
    <string name="creators">Creators</string>
    <string name="search">search</string>
    <string name="video_game_rating">89</string>
    <string name="sorting">Sorting</string>
    <string name="rating_metacritic">Rating Metacritic</string>
    <string name="rating_metacritic_min">Min</string>
    <string name="platform_text">Platforms</string>
    <string name="platform_name">PlayStation 5</string>
    <string name="store_name">PlayStation Store</string>
    <string name="popular_items_text">Popular items</string>
    <string name="popular_items">64,432</string>
    <string name="store_text">Stores</string>
    <string name="store_video_game_one_text">Grand Theft Auto V</string>
    <string name="store_video_game_one_count">17,614</string>
    <string name="store_video_game_two_text">The Witcher 3: Wild Hunt</string>
    <string name="store_video_game_two_count">16,386</string>
    <string name="store_video_game_three_text">Portal 2</string>
    <string name="store_video_game_three_count">15,418</string>
    <string name="tags_text">Tags</string>
    <string name="title_feed">Лента</string>
    <string name="title_like">Избранное</string>
    <string name="main_fragment">Main</string>
</resources>