<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/store"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="@color/primary_background">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/store_image_background"
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:src="@drawable/video_game_background_image"
        android:foreground="#99000000"
        app:siRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/store_name"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/popular_items_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="5dp"
        android:text="@string/popular_items_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_name"/>

    <TextView
        android:id="@+id/popular_items_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/popular_items"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popular_items_text"
        app:layout_constraintBottom_toBottomOf="@+id/popular_items_text"/>

    <TextView
        android:id="@+id/video_game_one_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="5dp"
        android:text="@string/store_video_game_one_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/popular_items_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/video_game_one_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/store_video_game_one_count"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video_game_one_text"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_one_text"/>

    <TextView
        android:id="@+id/video_game_two_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/store_video_game_two_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/video_game_one_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/video_game_two_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/store_video_game_two_count"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video_game_two_text"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_two_text"/>

    <TextView
        android:id="@+id/video_game_three_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/store_video_game_three_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/video_game_two_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/video_game_three_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/store_video_game_three_count"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video_game_three_text"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_three_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>